--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="gif-container">
           <img
-            id="cat-gif"
+            id="dog-gif"
             src="https://media.tenor.com/6_-osAtLuHUAAAAi/wave-cute.gif"
             alt="Милая мультяшная собачка"
           />
@@ -44,11 +44,7 @@
     </div>
 
     <button id="music-toggle" type="button" onclick="toggleMusic()">🔊</button>
-    <audio
-      id="bg-music"
-      loop
-      src="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Kevin_MacLeod/Calming/Kevin_MacLeod_-_Calmant.mp3"
-    ></audio>
+    <audio id="bg-music" loop src="music/there_is_romance.mp3"></audio>
 
     <script src="script.js"></script>
   </body>
