--- a/yes.html
+++ b/yes.html
@@ -37,11 +37,7 @@
     </div>
 
     <button id="music-toggle" type="button" onclick="toggleMusic()">🔊</button>
-    <audio
-      id="bg-music"
-      loop
-      src="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Kevin_MacLeod/Calming/Kevin_MacLeod_-_Calmant.mp3"
-    ></audio>
+    <audio id="bg-music" loop src="music/there_is_romance.mp3"></audio>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="yes-script.js"></script>
